Add: プライバシーポリシーの追加とレイアウト修正

--- a/app/views/shared/_footer.html.slim
+++ b/app/views/shared/_footer.html.slim
@@ -5,4 +5,4 @@ footer.footer
       strong  = link_to 'Buildesk', root_path, class: 'has-text-light'
     
     p = link_to '利用規約', user_policy_path, class: 'has-text-light'
-    p プライバシーポリシー
+    p = link_to 'プライバシーポリシー', privacy_policy_path, class: 'has-text-light'
