--- a/app/views/top/privacy_policy.html.slim
+++ b/app/views/top/privacy_policy.html.slim
@@ -8,5 +8,40 @@ main
           .content
             p.title.is-4.has-text-weight-bold.is-spaced
               = 'プライバシーポリシー'
-            p
-              = render 'shared/privacy_policy'
+            p.has-text-weight-semibold お客様から取得する情報
+            p 当社は、お客様から以下の情報を取得します。
+            ul
+              li 氏名(ニックネームやペンネームも含む)
+              li 職業、職歴、学歴
+              li メールアドレス
+              li 写真や動画
+              li 外部サービスでお客様が利用するID、その他外部サービスのプライバシー設定によりお客様が連携先に開示を認めた情報
+              li Cookie(クッキー)を用いて生成された識別情報
+            p.has-text-weight-semibold お客様の情報を利用する目的
+            p 当社は、お客様から取得した情報を、以下の目的のために利用します。
+            ul
+              li 当社サービスに関する登録の受付、お客様の本人確認、認証のため
+              li お客様の当社サービスの利用履歴を管理するため
+              li 当社サービスにおけるお客様の行動履歴を分析し、当社サービスの維持改善に役立てるため
+              li 市場分析、マーケティングのため
+              li 当社のサービスに関するご案内をするため
+              li お客様からのお問い合わせに対応するため
+              li 当社の規約や法令に違反する行為に対応するため
+              li 当社サービスの変更、提供中止、終了、契約解除をご連絡するため
+              li 当社規約の変更等を通知するため
+              li 以上の他、当社サービスの提供、維持、保護及び改善のため
+            p.has-text-weight-semibold 第三者提供
+            p 当社は、お客様から取得する情報のうち、個人データ（個人情報保護法第２条第６項）に該当するものついては、あらかじめお客様の同意を得ずに、第三者（日本国外にある者を含みます。）に提供しません。
+            p 但し、次の場合は除きます。
+            ul
+              li 個人データの取扱いを外部に委託する場合
+              li 当社や当社サービスが買収された場合
+              li 事業パートナーと共同利用する場合（具体的な共同利用がある場合は、その内容を別途公表します。）
+              li その他、法律によって合法的に第三者提供が許されている場合
+            p.has-text-weight-semibold アクセス解析ツール
+            p 当社は、お客様のアクセス解析のために、「Googleアナリティクス」を利用しています。Googleアナリティクスは、トラフィックデータの収集のためにCookieを使用しています。トラフィックデータは匿名で収集されており、個人を特定するものではありません。Cookieを無効にすれば、これらの情報の収集を拒否することができます。詳しくはお使いのブラウザの設定をご確認ください。Googleアナリティクスについて、詳しくは以下からご確認ください。
+            p[style="word-break: break-all;"] https://marketingplatform.google.com/about/analytics/terms/jp/
+            p.has-text-weight-semibold プライバシーポリシーの変更
+            p 当社は、必要に応じて、このプライバシーポリシーの内容を変更します。この場合、変更後のプライバシーポリシーの施行時期と内容を適切な方法により周知または通知します。
+            br
+            p 2021年07月16日 制定
