Fix: メアド認証とSNS認証を両立させるための修正

--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -5,7 +5,7 @@
       = f.input :name, label_html: { class: 'label' }, input_html: { class: 'input' }, error: false
   .field
     .control
-      = f.input :email, label_html: { class: 'label' }, input_html: { class: 'input' }, error: false
+      = f.input :email, label_html: { class: 'label' }, input_html: { class: 'input' }, error: false, required: true
   .field
     .control
       = f.input :password, label_html: { class: 'label' }, input_html: { class: 'input' }, error: false, required: true
