Fix: 本番環境でレイアウトが崩れるため修正

--- a/app/views/posts/_post_3col.html.slim
+++ b/app/views/posts/_post_3col.html.slim
@@ -1,4 +1,4 @@
-.column.is-one-third-desktop
+.column.is-half-mobile.is-one-third-desktop
   .card
     div id="post-id-#{post_3col.id}"
       = link_to post_path(post_3col)
