Fix: ページの読み込みに負担をかけないように画質サイズの調整

--- a/app/views/posts/_post_3col.html.slim
+++ b/app/views/posts/_post_3col.html.slim
@@ -4,7 +4,7 @@
       = link_to post_path(post_3col)
         .card-image
           figure.image.is-4by3
-            = image_tag post_3col.post_images.first.image_url(:main), alt: 'post-img'
+            = image_tag post_3col.post_images.first.image_url(:thumb_4x3), alt: 'post-img'
         .card-content
           .media
             .media-left
