--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -38,7 +38,7 @@ main
               .tile.is-vertical
             .tile.is-child
               figure.image.is-4by3
-                = image_tag @post.post_images.first.image_url(:main)
+                = image_tag @post.post_images.first.image_url
             / デスクトップ表示用コメント欄
             .tile.is-child.is-hidden-mobile
               p.title.has-text-weight-bold.is-5
