--- a/app/views/public_pages/500.html.slim
+++ b/app/views/public_pages/500.html.slim
@@ -1,4 +1,4 @@
-- set_meta_tags og: { og_title: t('.og_title'), description: t('.og_description') }
+- set_meta_tags title: t('.500 Internal Server Error')
 
 html.has-navbar-fixed-top
 header.is-dark.navbar.is-fixed-top[role="navigation" aria-label="main navigation"]
