--- a/app/views/top/privacy_policy.html.slim
+++ b/app/views/top/privacy_policy.html.slim
@@ -1,4 +1,4 @@
-- set_meta_tags og: { og_title: t('.og_title'), description: t('.og_description') }
+- set_meta_tags title: t('.title')
 
 main
   .container        
