--- a/app/views/items/show.html.slim
+++ b/app/views/items/show.html.slim
@@ -1,4 +1,4 @@
-- set_meta_tags title: t('.title'), og: { title: t('.og_title', item: @item.name) }
+- set_meta_tags title: t('.title'), og: { og_title: t('.og_title') }
 
 main
   section.columns.is-centered.is-marginless
