--- a/app/views/top/index.html.slim
+++ b/app/views/top/index.html.slim
@@ -1,4 +1,4 @@
-- set_meta_tags og: { title: t('.og_title'), description: t('.og_description') }
+- set_meta_tags og: { og_title: t('.og_title'), description: t('.og_description') }
 
 section.hero.hero-1.is-medium[style="background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7)), url('https://image.buildesk.app/images/buildesk-main.jpg')"]
   .hero-body
