--- a/app/views/users/non_user.html.slim
+++ b/app/views/users/non_user.html.slim
@@ -1,4 +1,4 @@
-- set_meta_tags title: t('.title')
+- set_meta_tags title: t('.title'), og: { og_title: t('.og_title') }
 
 main.columns.is-centered.is-marginless
   .column.is-three-quarters
