--- a/app/views/public_pages/404.html.slim
+++ b/app/views/public_pages/404.html.slim
@@ -1,4 +1,4 @@
-- set_meta_tags title: t('.404 Not Found')
+- set_meta_tags og: { og_title: t('.og_title'), description: t('.og_description') }
 
 html.has-navbar-fixed-top
 header.is-dark.navbar.is-fixed-top[role="navigation" aria-label="main navigation"]
