--- a/app/views/top/user_policy.slim
+++ b/app/views/top/user_policy.slim
@@ -1,4 +1,4 @@
-- set_meta_tags title: t('.title')
+- set_meta_tags og: { og_title: t('.og_title'), description: t('.og_description') }
 
 main
   .container        
