--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -1,4 +1,4 @@
-- set_meta_tags title: t('.title', user: @user.name), og: { title: t('.og_title', user: @user.name) }
+- set_meta_tags title: t('.title', user: @user.name), og: { og_title: t('.og_title', user: @user.name) }
 
 main.columns.is-centered.is-marginless
   .column.is-three-quarters
