Fix: Twitterでシェアしやすいようにツイートフォーマットを修正

--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -31,7 +31,7 @@ main.columns.is-centered.is-marginless
                       i.fa.fa-bookmark
                       span
                         = ' List'
-                = link_to "https://twitter.com/share?url=#{request.url}&text=#{@user.name}のデスク＆アイテム集&hashtags=Buildesk,デスク周り,デスクツアー", title: 'Twitter', target: '_blank', class: 'card-footer-item'
+                = link_to "https://twitter.com/share?url=#{request.url}&text=%0a%0a#{@user.name}のデスク＆アイテム集%0a%23Buildesk%20%23デスク周り%20%23デスクツアー", title: 'Twitter', target: '_blank', class: 'card-footer-item'
                   span.icon-text
                     i.fab.fa-twitter
                     span
