--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -98,7 +98,7 @@ main
                       time
                         = l @post.created_at, format: :long
                 footer.card-footer
-                  = link_to "https://twitter.com/share?url=#{request.url}&text=#{@post.user.name}のデスクをcheck!&hashtags=Buildesk,mynewgear,デスク周り,デスクツアー", title: 'Twitter', target: '_blank', class: 'card-footer-item'
+                  = link_to "https://twitter.com/share?url=#{request.url}&text=%0a%0a#{@post.user.name}のデスクをcheck!%0a%23Buildesk%20%23MyNewGear%20%23デスク周り%20%23デスクツアー", title: 'Twitter', target: '_blank', class: 'card-footer-item'
                     span.icon-text
                       i.fab.fa-twitter
                       = 'シェアする'
