--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -17,6 +17,7 @@ html
     meta[name="viewport" content="width=device-width, initial-scale=1"]
 
     = stylesheet_link_tag "https://unpkg.com/bulmaswatch/darkly/bulmaswatch.min.css"
+    = stylesheet_link_tag "https://unpkg.com/swiper/swiper-bundle.min.css"
     
     = display_meta_tags(default_meta_tags)
 
@@ -36,3 +37,4 @@ html
     = render 'shared/footer'
 
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', 'defer': 'defer'
+    = javascript_include_tag "https://unpkg.com/swiper/swiper-bundle.min.js"
