Add: URLに適さない記号があったためuuidに正規表現を追加

--- a/app/views/profiles/_form.html.slim
+++ b/app/views/profiles/_form.html.slim
@@ -17,6 +17,8 @@
       span.icon.is-left.has-text-weight-bold
         | ＠
       span.icon
+    p.help.has-text-grey-lighter.is-size-7
+      | 英数字とハイフン,アンダースコアのみ使用できます
 
   .field
     label.label
