--- a/app/views/shared/_footer.html.slim
+++ b/app/views/shared/_footer.html.slim
@@ -4,6 +4,9 @@ footer.footer
       strong © 2021 
       strong = link_to 'Buildesk', root_path, class: 'has-text-light'
     
-    p = link_to '利用規約', user_policy_path, class: 'has-text-light'
-    p = link_to 'プライバシーポリシー', privacy_policy_path, class: 'has-text-light'
-    p = link_to 'お問い合わせ', 'https://docs.google.com/forms/d/e/1FAIpQLSc3nv7546WfYCWEcRd53IdtfS4DKkyORGAEEAPr-QUggrWXuw/viewform', class: 'has-text-light'
+    p
+      = link_to '利用規約', user_policy_path, class: 'has-text-light'
+      | &ensp;
+      = link_to 'プライバシーポリシー', privacy_policy_path, class: 'has-text-light'
+      | &ensp;
+      = link_to 'お問い合わせ', 'https://docs.google.com/forms/d/e/1FAIpQLSc3nv7546WfYCWEcRd53IdtfS4DKkyORGAEEAPr-QUggrWXuw/viewform', class: 'has-text-light'
