Fix: 重複したアイテムを取り除いた数が表示されるための修正

--- a/app/views/posts/_post.html.slim
+++ b/app/views/posts/_post.html.slim
@@ -31,7 +31,7 @@
                     i
                       i.fa.fa-tags
                   span
-                    = post.item_tags.size
+                    = post.items.distinct.size
 
             .media-right
               span.tag.is-light.is-rounded
