--- a/app/views/posts/_post_3col.html.slim
+++ b/app/views/posts/_post_3col.html.slim
@@ -30,7 +30,7 @@
                       i
                         i.fa.fa-tags
                     span
-                      = post_3col.item_tags.size
+                      = post_3col.items.distinct.size
             .media-right
               span.tag.is-light.is-rounded.is-hidden-mobile
                 .is-6
