--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -37,7 +37,7 @@ main
             /.tile
               .tile.is-vertical
             .tile.is-child
-              .swiper-container
+              .swiper
                 .swiper-wrapper
                   - @post.post_images.each do | image |
                     .swiper-slide
