--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -16,7 +16,7 @@ html
     meta[name="viewport" content="width=device-width, initial-scale=1"]
 
     = stylesheet_link_tag "https://unpkg.com/bulmaswatch/darkly/bulmaswatch.min.css"
-    = stylesheet_link_tag "https://unpkg.com/swiper/swiper-bundle.min.css"
+    = stylesheet_link_tag "https://unpkg.com/swiper@7/swiper-bundle.min.css"
     
     = display_meta_tags(default_meta_tags)
 
@@ -36,4 +36,4 @@ html
     = render 'shared/footer'
 
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', 'defer': 'defer'
-    = javascript_include_tag "https://unpkg.com/swiper/swiper-bundle.min.js"
+    = javascript_include_tag "https://unpkg.com/swiper@7/swiper-bundle.min.js"
