Add: いいねしたときの挙動をAjax化

--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -76,7 +76,10 @@ main
                         = render 'bookmarks/unbookmark', post: @post
                     span.icon-text
                       span.icon.is-medium
-                        = render 'likes/like', post: @post
+                        - if current_user&.liked?(@post)
+                          = render 'likes/like', post: @post
+                        - else
+                          = render 'likes/unlike', post: @post
                       span
                         = @like_count
                 .card-content
