--- a/app/views/likes/_like.html.slim
+++ b/app/views/likes/_like.html.slim
@@ -1,6 +1,2 @@
-- if current_user&.liked?(post)
-  = link_to like_path(post), method: :delete, id: "button-like-#{post.id}" do
-    i.fas.fa-heart.fa-lg
-- else 
-  = link_to post_likes_path(post), method: :post, id: "button-like-#{post.id}" do
-    i.far.fa-heart.fa-lg
+= link_to like_path(post), method: :delete, id: "button-like-#{post.id}", remote: true do
+  i.fas.fa-heart.fa-lg
