--- a/app/views/likes/_unlike.html.slim
+++ b/app/views/likes/_unlike.html.slim
@@ -1,2 +1,5 @@
-= link_to post_likes_path(post), method: :post, id: "button-like-#{post.id}", remote: true do
-  i.far.fa-heart.fa-lg
+span.icon.is-medium
+  = link_to post_likes_path(post), method: :post, id: "button-like-#{post.id}", remote: true do
+    i.far.fa-heart.fa-lg
+span#like-count
+  = @like_count
