Fix: post_editが読み込まれるページを指定
post_editは投稿フォームでしか必要なく、Topページの検証ツールでonchangeのエラーが表示されるため

--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -117,5 +117,7 @@
             = f.text_field :keyword, id: 'js-search-keyword', placeholder: 'キーワードを入力', class: 'input'
           .control
             = f.submit '検索', id: 'js-search-button', class: %w[button is-primary]
-          
+
+
+= javascript_pack_tag "post_edit" 
       
